Set navbar to position fixed and a z-index of 2

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,3 +1,12 @@
+.navbar {
+  display: block;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 2;
+}
+
 .navbar-lewagon {
   justify-content: space-between;
   background: #131515;
@@ -11,12 +20,7 @@
   width: 40px;
 }
 
-// .navbar {
-//   display: none;
-
-//   // Uncomment this to re-display the navbar
-//   // display: block;
-// }@import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700);
+// @import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700);
 @import url(https://raw.github.com/FortAwesome/Font-Awesome/master/docs/assets/css/font-awesome.min.css);
 
 body {
